# shooting_game_by_bevy

./: Cargo.toml
src/: main.rs  shooting.rs
src/shooting/: gameset.rs  shooting_game.rs  shooting_plugin.rs
src/shooting/shooting_game/: collider.rs  debri.rs  enemy.rs  enemy_spawner.rs  faction.rs  hit.rs  hp.rs  lifetime.rs  move_entity.rs  movement.rs  player.rs  projectile.rs  shooter.rs  take_damage.rs
src/shooting/shooting_game/collider/: ball_bundle.rs  collider_bundle.rs
src/shooting/shooting_game/debri/: debri_component.rs  debri_message.rs  debri_plugin.rs  debri_system.rs
src/shooting/shooting_game/enemy/: enemy_bundle.rs  enemy_plugin.rs  enemy_resource.rs  enemy_system.rs
src/shooting/shooting_game/enemy_spawner/: enemy_spawner_resource.rs  enemy_spawner_system.rs
src/shooting/shooting_game/faction/: faction_component.rs
src/shooting/shooting_game/hit/: hit_dispatch.rs  hit_message.rs  hit_plugin.rs
src/shooting/shooting_game/hp/: hp_component.rs
src/shooting/shooting_game/lifetime/: lifetime_component.rs  lifetime_plugin.rs  lifetime_system.rs
src/shooting/shooting_game/move_entity/: move_entity_bundle.rs
src/shooting/shooting_game/movement/: movement_bundle.rs  movement_component.rs  movement_plugin.rs  movement_system.rs
src/shooting/shooting_game/player/: player_bundle.rs  player_component.rs  player_plugin.rs  player_resource.rs  player_system.rs
src/shooting/shooting_game/projectile/: projectile_bundle.rs  projectile_component.rs  projectile_message.rs  projectile_plugin.rs  projectile_resource.rs  projectile_system.rs
(+19 files in other folders)
